<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.almacen.keplerclientesapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.almacen.keplerclientesapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.almacen.keplerclientesapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.almacen.keplerclientesapp.ui.pedido.PedidoFragment"
        android:label="PEDIDOS"
        tools:layout="@layout/fragment_pedido" />
    <activity
        android:id="@+id/activityConsulPedi2"
        android:name="com.almacen.keplerclientesapp.activity.Pedidos.ActivityConsulPedi"
        android:label="ActivityConsulPedi" />

    <activity
        android:id="@+id/activityConsulCoti2"
        android:name="com.almacen.keplerclientesapp.activity.Pedidos.ActivityConsulCoti"
        android:label="ActivityConsulPedi" />
    <activity
        android:id="@+id/busquedaActivity"
        android:name="com.almacen.keplerclientesapp.BusquedaActivity"
        android:label="BusquedaActivity" />

</navigation>