<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.loginFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">


                    <ImageView
                        android:id="@+id/imagEmpresa"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/mycedis3" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/usuario"
                        android:layout_margin="5dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:helperText="Ingrese su usuario"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/ediUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrase_a"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:helperText="Ingrese su Contraseña"
                        app:passwordToggleEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:startIconDrawable="@drawable/ic_baseline_password_24"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editContraseña"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEntrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/entrar"
                        android:backgroundTint="@color/black"
                        android:layout_margin="10dp"
                        app:elevation="10dp"
                        tools:ignore="UnusedAttribute"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/forgetPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:linksClickable="true"
                        android:text="@string/olvidaste_tu_contrase_a"
                        android:textColor="@color/red_700"
                        android:visibility="gone"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/haveAccont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/tienes_cuenta"
                        android:linksClickable="true"
                        android:textStyle="bold"
                        android:visibility="gone"
                        android:textColor="@color/red_700" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/SelectEmpre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/SelectEmpres"
                        android:linksClickable="true"
                        android:textStyle="bold"
                        android:textColor="@color/red_700" />

                </LinearLayout>





        </ScrollView>



</FrameLayout>