<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.requestUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="top">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completa_tus_datos"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_s"
                    android:layout_margin="5dp"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red_500"
                    app:helperText="Escriba aqui su nombre o (s)"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"

                    app:errorTextColor="@color/red_500"
                    android:layout_margin="5dp"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:errorEnabled="true"
                    app:helperText="Escriba aqui sus apellidos"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPuesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Puesto"
                    android:layout_margin="5dp"
                    app:errorTextColor="@color/red_500"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:errorEnabled="true"
                    app:helperText="Escriba aqui su puesto en la empresa"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPuesto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtRFC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rfc"
                    android:layout_margin="5dp"
                    app:errorTextColor="@color/red_500"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:helperText="Escriba aqui su RFC"
                    app:counterEnabled="true"
                    app:counterMaxLength="13"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edRfc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:layout_margin="5dp"
                    app:errorTextColor="@color/red_500"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:helperText="Escriba su telefono"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:startIconDrawable="@drawable/ic_baseline_contact_phone_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correa"
                    android:layout_margin="5dp"
                    app:errorTextColor="@color/red_500"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:helperText="Escriba su correo"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_mail_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtContra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:layout_margin="5dp"
                    app:errorTextColor="@color/red_500"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:helperText="Escriba aqui su contraseña "
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_password_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="normal"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>





                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/la_contrase_a_debe_contener_entre_6_a_20_caracteres_sin_espacios"
                    android:textStyle="italic"
                    android:textSize="10sp"
                    android:layout_margin="10dp"
                    tools:ignore="SmallSp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar"
                    android:backgroundTint="@color/black"
                    android:layout_margin="10dp"
                    app:elevation="10dp"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</FrameLayout>